Bug 9747 - Oops on boot from laptop mode writing to /proc/acpi/processor/CPU0/throttling
Summary: Oops on boot from laptop mode writing to /proc/acpi/processor/CPU0/throttling
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Config-Processors (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Alexey Starikovskiy
URL:
Keywords:
Depends on:
Blocks: 9243
  Show dependency tree
 
Reported: 2008-01-14 11:19 UTC by Simon Huggins
Modified: 2008-01-24 12:46 UTC (History)
3 users (show)

See Also:
Kernel Version: 2.6.24-rc7
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
Fix throttling write (1.04 KB, patch)
2008-01-14 14:05 UTC, Alexey Starikovskiy
Details | Diff

Description Simon Huggins 2008-01-14 11:19:40 UTC
Latest working kernel version: Unsure.  Later than 2.6.24-rc2
Earliest failing kernel version: 2.6.24-rc6 (possibly earlier)
Distribution: Debian
Hardware Environment: Toshiba Portege r500
Software Environment:
Problem Description:

When I boot laptop-mode fires up and tries to write to /proc/acpi/processor/CPU0/throttling which contains <not supported>

I don't quite know what I've done to get it to contain <not supported> but anyway that'll be more fun to track down I'm sure.

In any case, in this configuration I get this oops even if all I do is
echo stuff >/proc/acpi/processor/CPU0/throttling

[   32.378673] Unable to handle kernel NULL pointer dereference at 0000000000000
000 RIP: 
[   32.378761]  [<0000000000000000>] _stext+0x7fdf7000/0x1a
[   32.378965] PGD 37bb3067 PUD 37b2a067 PMD 0 
[   32.379182] Oops: 0010 [1] SMP 
[   32.379350] CPU 0 
[   32.379466] Modules linked in: rfcomm l2cap bluetooth acpi_cpufreq cpufreq_st
ats cpufreq_userspace cpufreq_powersave cpufreq_ondemand freq_table sg sr_mod cd
rom loop arc4 ecb blkcipher snd_hda_intel snd_pcm_oss snd_pcm snd_mixer_oss snd_
seq_dummy pcmcia snd_seq_oss snd_seq_midi snd_rawmidi snd_seq_midi_event iwl4965
 snd_seq firmware_class sdhci snd_timer snd_seq_device mmc_core mac80211 yenta_s
ocket rsrc_nonstatic pcmcia_core snd psmouse soundcore cfg80211 snd_page_alloc i
ntel_agp battery ac button evdev usb_storage ext3 jbd mbcache dm_mirror dm_snaps
hot dm_mod ehci_hcd uhci_hcd e1000 sd_mod thermal processor fan
[   32.382717] Pid: 3267, comm: laptop_mode Not tainted 2.6.24-rc7 #1
[   32.382797] RIP: 0010:[<0000000000000000>]  [<0000000000000000>] _stext+0x7fd
f7000/0x1a
[   32.382948] RSP: 0018:ffff81007b84de80  EFLAGS: 00010296
[   32.383027] RAX: 0000000000000000 RBX: ffff81007d8c7800 RCX: 0000000000000000
[   32.383110] RDX: ffff8100826b9000 RSI: 0000000000000000 RDI: ffff81007d8c7800
[   32.383193] RBP: fffffffffffffffb R08: 000000000000002d R09: 0000000000000000
[   32.383276] R10: 740174016f017201 R11: ffffffff802d03ef R12: 0000000000000000
[   32.383359] R13: 0000000000000003 R14: 0000000000000003 R15: 00000000005c5808
[   32.383442] FS:  00002b6898b11dc0(0000) GS:ffffffff804cd000(0000) knlGS:0000000000000000
[   32.383545] CS:  0010 DS: 0000 ES: 0000 CR0: 000000008005003b
[   32.383625] CR2: 0000000000000000 CR3: 000000007ba46000 CR4: 00000000000006e0
[   32.383707] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
[   32.383790] DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400
[   32.383873] Process laptop_mode (pid: 3267, threadinfo ffff81007b84c000, task ffff81007ba40040)
[   32.383977] Stack:  ffffffff88003c3d 0000000000000003 ffff81007d8c7800 ffff81007b84df50
[   32.384314]  ffffffff88003e43 00000000000a312d ffff810000000000 ffff81007d897cc0
[   32.384603]  fffffffffffffffb ffff81007ba57540 ffffffff802b717d ffff81007ba57780
[   32.384829] Call Trace:
[   32.384973]  [<ffffffff88003c3d>] :processor:acpi_processor_set_throttling+0x37/0x52
[   32.385083]  [<ffffffff88003e43>] :processor:acpi_processor_write_throttling+0x61/0x74
[   32.385191]  [<ffffffff802b717d>] proc_reg_write+0x7e/0x99
[   32.385273]  [<ffffffff8028205f>] vfs_write+0xc6/0x14f
[   32.385354]  [<ffffffff802825ad>] sys_write+0x45/0x6e
[   32.385435]  [<ffffffff8020beee>] system_call+0x7e/0x83
[   32.385517] 
[   32.385585] 
[   32.385585] Code:  Bad RIP value.
[   32.385819] RIP  [<0000000000000000>] _stext+0x7fdf7000/0x1a
[   32.385947]  RSP <ffff81007b84de80>
[   32.386020] CR2: 0000000000000000
[   32.386109] ---[ end trace 2ded1a5f4094ec80 ]---
Comment 1 Anonymous Emailer 2008-01-14 13:26:12 UTC
Reply-To: akpm@linux-foundation.org

On Mon, 14 Jan 2008 11:19:42 -0800 (PST)
bugme-daemon@bugzilla.kernel.org wrote:

> http://bugzilla.kernel.org/show_bug.cgi?id=9747
> 
>            Summary: Oops on boot from laptop mode writing to
>                     /proc/acpi/processor/CPU0/throttling
>            Product: ACPI
>            Version: 2.5
>      KernelVersion: 2.6.24-rc7
>           Platform: All
>         OS/Version: Linux
>               Tree: Mainline
>             Status: NEW
>           Severity: normal
>           Priority: P1
>          Component: Config-Processors
>         AssignedTo: acpi_config-processors@kernel-bugs.osdl.org
>         ReportedBy: huggie@earth.li
> 
> 
> Latest working kernel version: Unsure.  Later than 2.6.24-rc2
> Earliest failing kernel version: 2.6.24-rc6 (possibly earlier)
> Distribution: Debian
> Hardware Environment: Toshiba Portege r500
> Software Environment:
> Problem Description:
> 
> When I boot laptop-mode fires up and tries to write to
> /proc/acpi/processor/CPU0/throttling which contains <not supported>
> 
> I don't quite know what I've done to get it to contain <not supported> but
> anyway that'll be more fun to track down I'm sure.
> 
> In any case, in this configuration I get this oops even if all I do is
> echo stuff >/proc/acpi/processor/CPU0/throttling
> 
> [   32.378673] Unable to handle kernel NULL pointer dereference at
> 0000000000000
> 000 RIP: 

Guys, this is a serious post-2.6.23 regression.
Comment 2 Alexey Starikovskiy 2008-01-14 14:05:39 UTC
Created attachment 14456 [details]
Fix throttling write

Please check if this patch helps.
Comment 3 Simon Huggins 2008-01-14 14:14:32 UTC
Yes that seems to fix it.

Now when I try to echo into it I get:
echo: write error: No such device
instead of an oops.
Comment 4 Alexey Starikovskiy 2008-01-14 14:18:20 UTC
Good, thanks for report!
Comment 5 Len Brown 2008-01-14 21:47:22 UTC
patch in comment #2 applied to acpi tree
Comment 6 Len Brown 2008-01-24 12:46:22 UTC
the patch in comment #2
shipped in Linux-2.6.24-rc8-git8
closed.

Note You need to log in before you can comment on or make changes to this bug.